--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^4.13.18",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
